Migrate backend from Java 17 to Java 21
Build & dependency changes:
- Bump java.version from 17 to 21 in pom.xml
- Upgrade Spring Boot from 3.2.0 to 3.4.1
- Update project description to reference Java 21

Java 21 language features adopted:
- Article.Section: Converted from flat record with type discriminator to
  sealed interface with typed record variants (Paragraph, SectionHeading,
  ItemList, Image, Code, Quote), enabling exhaustive pattern matching in
  switch expressions (JEP 441)
- Added Jackson @JsonTypeInfo/@JsonSubTypes annotations to preserve
  frontend-compatible JSON serialization with 'type' discriminator field
- Content.plainText(): New default method using pattern matching for
  switch with sealed types to extract plain text from any content block
- ArticleV2.primaryAuthor(): Use SequencedCollection.getFirst() (Java 21)
  instead of get(0)

Bug fixes:
- Fix package declarations in all newmodel/ files: changed from
  com.anthropic.articleservice.model.newmodel to
  com.anthropic.articleservice.newmodel to match directory structure
- Rename PublishingInfo.featured() factory to featuredPublished() to avoid
  conflict with the auto-generated record accessor for the boolean field

Documentation updated:
- CLAUDE.md: Mark Java 21 upgrade as complete, update Spring Boot version
- backend/CLAUDE.md: Update Java version, Spring Boot version, Section
  type documentation, sealed types reference, and known limitations